--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "extends": "@tsconfig/node16/tsconfig.json",
-    "compilerOptions": {
-        "noImplicitAny": false,
-        "outDir": "./",
-    },
-    "exclude": ["node_modules", "dist", "__tests__"],
-    "include": ["src/**/*.ts"]
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "outDir": "dist",
+    "sourceMap": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", ".vscode"]
 }
