--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@qiwi/bill-payments-node-js-sdk": "^3.2.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.6",
     "dotenv": "^10.0.0",
